# minkipc

./: CMakeLists.txt
listeners/libgptservice/: CMakeLists.txt  README.md  gpt_logging.c  gpt_logging.h  gpt_msg.h  gpt_service.c
listeners/librpmbservice/: CMakeLists.txt  README.md  comdef.h  rpmb.c  rpmb.h  rpmb_core.c  rpmb_core.h  rpmb_detect.c  rpmb_emmc.c  rpmb_logging.c  rpmb_logging.h  rpmb_msg.h  rpmb_service.c  rpmb_stubs.c  rpmb_ufs.c  rpmb_ufs.h  types.h
qtee_supplicant/: CMakeLists.txt
qtee_supplicant/src/: listener_mngr.c
